--- a/demos/blink_demo/Makefile
+++ b/demos/blink_demo/Makefile
@@ -10,8 +10,10 @@ AS              = msp430-elf-as
 
 all: blink.elf 
 
-#additional rules for files
-blink.elf: ${COMMON_OBJECTS} blinkMain.o stateMachines.o led.o wdInterruptHandler.o ../lib/libTimer.a
+
+#Button
+blink.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o switches.o blinkMain.o stateMachines.o led.o wdInterruptHandler.o ../lib/libTimer.a
+
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
 load: blink.elf
@@ -19,6 +21,8 @@ load: blink.elf
 
 clean:
 	rm -f *.o *.elf
+
+switches.o: switches.h
 
 led.o: led.c led.h
 
